# rayTracer

KatosTracer/: RayTracer.sln
KatosTracer/Debug/: RayTracer.ilk
KatosTracer/RayTracer/: CMakeLists.txt  RayTracer.filters  RayTracer.vcxproj
KatosTracer/RayTracer/Debug/: vc142.idb
KatosTracer/RayTracer/Debug/RayTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KatosTracer/RayTracer/include/: Camera.h
KatosTracer/RayTracer/include/geometry/: Hittable.h  HittableList.h  Ray.h  Sphere.h  Vector3.h
KatosTracer/RayTracer/include/materials/: Dielectric.h  Lambertian.h  Material.h  Metal.h
KatosTracer/RayTracer/include/utilities/: ColorUtils.h  MathUtils.h
KatosTracer/RayTracer/source/: Camera.cpp  Main.cpp
KatosTracer/RayTracer/source/geometry/: HittableList.cpp  Ray.cpp  Sphere.cpp  Vector3.cpp
KatosTracer/RayTracer/source/materials/: Dielectric.cpp  Lambertian.cpp  Metal.cpp
